# rez-proxy

./: .dockerignore  .gitignore  .goreleaser.yml  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  DEVELOPMENT_EN.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  NOX_COMMANDS.md  README.md  README_old.md  README_zh.md  REZ_API_FIXES.md  REZ_CONFIG_IMPLEMENTATION.md  dev-config.env  fix_imports.py  noxfile.py  pyproject.toml  test_nox.py
.github/workflows/: ci.yml  release.yml  test.yml
config/: rez_proxy.json
examples/: context_aware_client.py  rez-config-example.py
scripts/: add_versioning.py  release.sh  setup_dev.py  test_demo.py
src/rez_proxy/: cli.py  config.py  exceptions.py  main.py
src/rez_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/rez_proxy/core/: context.py  platform.py  rez_config.py  rez_imports.py  web_compatibility.py  web_detector.py
src/rez_proxy/middleware/: context.py  web_compatibility.py
src/rez_proxy/models/: schemas.py
src/rez_proxy/routers/: build.py  config_management.py  environments.py  package_ops.py  packages.py  repositories.py  resolver.py  rez_config.py  shells.py  suites.py  system.py  versions.py  web_detection.py
src/rez_proxy/utils/: config_utils.py  rez_detector.py
tests/: __init__.py  conftest.py  test_api.py  test_app_startup.py  test_cli.py  test_config_management.py  test_core_context.py  test_core_platform.py  test_core_rez_config.py  test_error_handling.py  test_exceptions.py  test_integration_basic.py  test_middleware_context.py  test_middleware_context_comprehensive.py  test_rez_integration.py  test_routers_build.py  test_routers_build_comprehensive.py  test_routers_environments.py  test_routers_environments_basic.py  test_routers_environments_comprehensive.py  test_routers_package_ops.py  test_routers_package_ops_comprehensive.py  test_routers_packages.py  test_routers_repositories.py  test_routers_resolver.py  test_routers_resolver_old.py  test_routers_rez_config.py  test_routers_rez_config_comprehensive.py  test_routers_suites_comprehensive.py  test_routers_versions.py  test_routers_versions_comprehensive.py  test_utils_config_utils.py  test_web_detector.py
